prost-unwrap-proto-tests/tests/ui/empty.stderr
error: Unexpected syntax: unexpected end of input, expected an expression
 --> tests/ui/empty.rs:2:5
  |
2 |     prost_unwrap::include!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prost_unwrap::include` (in Nightly builds, run with -Z macro-backtrace for more info)
