prost-unwrap-proto-tests/tests/ui/empty.rs
mod test {
    prost_unwrap::include!();
}

fn main() {}
